--- a/_posts/2026-01-04-abschied.md
+++ b/_posts/2026-01-04-abschied.md
@@ -24,16 +24,5 @@ Jetzt sehne ich mich noch nach dem Moment, an dem ich einen Job in Canada habe. 
 Ich bin schon oft weggezogen, auch ins Ausland. Aber bisher gab es immer einen Plan für das „Danach“. Diesmal gibt es ihn nicht. Das ist einerseits befreiend und schön – und andererseits verdammt beängstigend.
 
 Hier noch ein paar Fotos aus den letzten Wochen.
-{% assign image_list = "Wolfi.jpeg,reiten.jpg,lavikate.jpeg,chaos.jpg,chaos2.jpg,umzug.jpeg,Weihnachten.jpeg" | split: "," %}
-<div class="swiper">
-  <div class="swiper-wrapper">
-    {% for img in image_list %}
-      <div class="swiper-slide">
-        <img src="{{ '/assets/img/' | append: img | relative_url }}" alt="{{ img }}">
-      </div>
-    {% endfor %}
-  </div>
-  <div class="swiper-button-next"></div>
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-pagination"></div>
-</div>
+
+{% include carousel.html images="Wolfi.jpeg,reiten.jpg,lavikate.jpeg,chaos.jpg,umzug.jpeg,chaos2.jpg" %} 
