--- a/_posts/2026-01-04-abschied.md
+++ b/_posts/2026-01-04-abschied.md
@@ -25,4 +25,4 @@ Ich bin schon oft weggezogen, auch ins Ausland. Aber bisher gab es immer einen P
 
 Hier noch ein paar Fotos aus den letzten Wochen.
 
-{% include carousel.html images="Wolfi.jpeg,reiten.jpg,lavikate.jpeg,chaos.jpg,umzug.jpeg,chaos2.jpg" %} 
+{% include carousel.html images="Wolfi.jpeg,Reiten.jpg,LaviKate.jpeg,Chaos.jpg,Umzug.jpeg,Chaos2.jpg" %} 
